maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:10: error: not found: value prendsBicuit
prendsBicuit();
^